landing page designed. known issues: height on different screens not perfect, maybe good enough; not responsive (bootstrap grid not yet implemented)

--- a/Client/Content/Site.css
+++ b/Client/Content/Site.css
@@ -94,7 +94,7 @@ h5, h6 {
 ----------------------------------------------------------*/
 .content-wrapper {
     margin: 0 auto;
-    max-width: 960px;
+    max-width: 1080px;
 }
 
 #body {
@@ -104,7 +104,7 @@ h5, h6 {
 }
 
     .main-content {
-        background: url("../Images/accent.png") no-repeat;
+        /*background: url("../Images/accent.png") no-repeat;*/
         padding-left: 10px;
         padding-top: 30px;
     }
